<resources>
    <string name="app_name">AndroidMapsPolylines</string>
    <string name="title_activity_maps">Map</string>

    <!--- User prefereces request -->
    <string name="select_mode">Choose your type of car</string>
    <string name="select_req">Select an option</string>
    <string name="poolMode">Pool</string>
    <string name="privateMode">Private</string>
    <string name="init_ride">Start</string>
    <string name="reqPets">Ride with Pets</string>
    <string name="reqLuggage">Ride with luggage</string>
    <string name="reqBB">Ride with BB</string>
    <string name="enjoy_trip">Enjoy your trip 😊</string>
    <string name="ride_on_the_go">Your ride is in the way</string>
    <string name="close">Close</string>
    <string name="try_it_again">Ride found\n try again the demo :)</string>
    <string name="taking_care_of_ride">Preparing your ride</string>
</resources>

