<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/selectMode_txt"
        android:gravity="center"
        android:text="@string/select_mode"
        style="@style/ActionItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/selectMode_txt"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/ib_pool_mode"
                android:background="@drawable/round_shape"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people_outline_white_24dp"
                />


            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="@color/colorDark"
                android:textSize="14dp"
                android:textStyle="bold"
                android:text="@string/poolMode"
                />


        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_private_mode"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/round_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_directions_car_white_24dp"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="@color/colorDark"
                android:textSize="14dp"
                android:textStyle="bold"
                android:text="@string/privateMode"
                />

        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>